Use condense whitespace to fix game grid

--- a/src/app/components/game/grid/grid.styl
+++ b/src/app/components/game/grid/grid.styl
@@ -33,9 +33,6 @@
 				width: 300px + @padding * 2
 
 	&-items
-		display: flex
-		flex-wrap: wrap
-
 		@media $media-sm-up
 			margin-left: -($grid-gutter-width / 2)
 			margin-right: -($grid-gutter-width / 2)
@@ -57,7 +54,6 @@
 
 .scrollable-grid .game-grid
 	&-items
-		display: block
 		margin-left: 0
 		margin-right: 0
 
